--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,7 @@
         "react"
     ],
     "rules": {
+        "semi": [2, "always"],
+        "@typescript-eslint/semi": [2, "always"]
     }
 }
